# twig

./: .gitignore  Cargo.toml  README.md
contrib/: zellij-layout.kdl
crates/core/: Cargo.toml
crates/core/src/: config.rs  diffnav.rs  editor.rs  highlight.rs  keymap.rs  lib.rs  search.rs  watch.rs
crates/core/src/repo/: diff.rs  discovery.rs  files.rs  mod.rs  ops.rs  status.rs
crates/core/tests/: merge.rs  search_filter.rs  submodule_discard.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  fonts.rs  keys.rs  main.rs  term.rs  theme.rs
crates/gui/src/app/: diff.rs  editor.rs  find.rs  graph.rs  graph_ops.rs  mod.rs  nav.rs  ops.rs  remote.rs  search_tab.rs
crates/gui/src/ui/: bars.rs  changes.rs  diff_view.rs  graph_view.rs  help.rs  input.rs  mod.rs  modals.rs  search_view.rs  settings.rs  sidebar.rs  tabs.rs
crates/term/: Cargo.toml
crates/term/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  clipboard.rs  herdr.rs  keys.rs  lib.rs  main.rs  mux.rs  session.rs  term.rs  ui.rs  zellij.rs
crates/tui/src/app/: changes.rs  diff.rs  editor.rs  graph.rs  graph_ops.rs  input.rs  mod.rs  nav.rs  prompt.rs  remote.rs  search.rs  session_sync.rs
crates/tui/src/ui/: diff.rs  graph.rs  help.rs  mod.rs  search.rs  settings.rs
crates/tui/tests/: cursor_probe.rs  editor.rs  multipane.rs  render.rs  settings.rs
src/: app.rs  color.rs  config.rs  fonts.rs  highlight.rs  keys.rs  main.rs  search.rs  term.rs  theme.rs  watch.rs
src/repo/: diff.rs  discovery.rs  files.rs  graph.rs  mod.rs  ops.rs  status.rs
src/ui/: diff_view.rs  graph_view.rs  mod.rs  search_view.rs  sidebar.rs
