[package]
name = "twig-git-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "twig"
path = "src/main.rs"

[dependencies]
alacritty_terminal = "0.26.0"
eframe = "0.35.0"
egui = "0.35"
git2 = { version = "0.21.0", features = ["ssh", "https"] }
ignore = "0.4.26"
notify-debouncer-mini = "0.7.0"
portable-pty = "0.9.0"
regex = "1.12.4"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"], optional = true }
toml = "1.1.2"
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"], optional = true }

[features]
default = ["syntax-highlight"]
syntax-highlight = ["dep:syntect", "dep:two-face"]
