[package]
name = "twit-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "twit_core"
path = "src/lib.rs"

[dependencies]
git2 = { version = "0.21.0", features = ["ssh", "https"] }
ignore = "0.4.26"
notify-debouncer-mini = "0.7.0"
regex = "1.12.4"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"], optional = true }
toml = "1.1.2"
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"], optional = true }

[features]
default = ["syntax-highlight"]
syntax-highlight = ["dep:syntect", "dep:two-face"]
