[package]
name = "twig-git-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "twig"
path = "src/main.rs"

[dependencies]
twig-core = { path = "../core", default-features = false }
twig-term = { path = "../term" }
eframe = "0.35.0"
egui = "0.35"
git2 = { version = "0.21.0", features = ["ssh", "https"] }
regex = "1.12.4"

[features]
default = ["syntax-highlight"]
syntax-highlight = ["twig-core/syntax-highlight"]
