[package]
name = "twig"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "twig"
path = "src/main.rs"

[dependencies]
twit-core = { path = "../core", default-features = false }
twit-term = { path = "../term" }
eframe = "0.35.0"
egui = "0.35"
git2 = { version = "0.21.0", features = ["ssh", "https"] }
regex = "1.12.4"

[features]
default = ["syntax-highlight"]
syntax-highlight = ["twit-core/syntax-highlight"]
